car website changes

--- a/index.html
+++ b/index.html
@@ -1,24 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body style="background-color: grey">
-    <!-- code -->
-    <h2 style="color: green; font-size: 44px">Car Website</h2>
-    <div>
-      <h3 style="font-size: 30px; color: blue">Welcome to our Website</h3>
-      <p style="font-size: 25px;">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur
-        adipisci atque nulla doloremque quaerat beatae, fuga accusamus iusto
-        dolorem vel corporis commodi nisi omnis exercitationem impedit
-      </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+    <h1>Welcome to our website</h1>
+
+    <h3>Our website info</h3>
+
+    <p>BNET Motors began as a
+         small family-owned business with a mission to revolutionize the 
+         automobile industry through cutting-edge design and engineering. 
+         Over the years, Nova Motors has grown into a global brand, known for 
+         its innovative approach to producing high-performance vehicles. With
+         a commitment to both luxury and affordability, the company has 
+         introduced a range of models, from sleek sedans to eco-friendly 
+          electric cars, marking its presence in over 50 countries. Notably, 
+          BNET Motors pioneered hybrid technology in the early 2000s, making 
+          them one of the first car manufacturers to focus on environmental sustainability.</p>
+
+    <div class="about">
+
+        <h2>Mission and vision</h2>
+        <p>At BNET Motors, our mission is to create vehicles that embody the 
+            perfect balance between performance, safety, 
+            and sustainability. We aim to drive the future of mobility with 
+            cutting-edge technologies, like AI-powered driver assistance and 
+            electric propulsion systems, making the roads safer and the planet greener. 
+            Our vision is to lead the global automotive market by continuously evolving, 
+            crafting cars that excite, inspire, and bring people closer to their dreams.</p>
+
     </div>
 
-    <div>
-      <img src="./images/car.jpeg" alt="this is a car" />
+
+    <div class="about">
+
+        <h2>Reputation</h2>
+        <p>BNET Motors has consistently been recognized for its excellence in engineering 
+            and customer service. It has received numerous awards, including the "World 
+            Car of the Year" for its flagship electric SUV and the "Top Safety Pick" i
+            n multiple categories. Additionally, the brand is celebrated for its reliability, 
+            ranking among the top automakers in global customer satisfaction surveys. 
+            BNET Motors is committed to quality and sustainability, earning ISO 14001 
+            certification for environmental management in its manufacturing plants.</p>
+
     </div>
-  </body>
+
+    <div class="details">
+
+        <h2>3000</h2>
+        <h4>Our workforce</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Aut impedit maxime distinctio quas ex asperiores porro totam quae!</p>
+
+    </div>
+
+
+    <div class="details">
+
+        <h2>50%</h2>
+        <h4>Increase in productivity</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Aut impedit maxime distinctio quas ex asperiores porro totam quae!</p>
+
+    </div>
+
+    <div class="details">
+
+        <h2>+25%</h2>
+        <h4>Increase in Customer satisfaction</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Aut impedit maxime distinctio quas ex asperiores porro totam quae!</p>
+
+    </div>
+
+
+    <div class="image">
+        <img src="car1.jpeg" alt="car1" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">BMW</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">500,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 2.jpeg" alt="car2" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Discovery</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">300,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 3.jpeg" alt="car3" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Mustang</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">800,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car1.jpeg" alt="car1" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">BMW</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">500,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 2.jpeg" alt="car2" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Discovery</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">300,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 3.jpeg" alt="car3" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Mustang</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">800,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 4.jpeg" alt="car4" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Audi</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">600,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car1.jpeg" alt="car1" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">BMW</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">500,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 2.jpeg" alt="car2" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Discovery</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">300,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 3.jpeg" alt="car3" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Mustang</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">800,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 4.jpeg" alt="car4" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Audi</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">600,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+    <div class="image">
+        <img src="car 4.jpeg" alt="car4" width="300px" height="200px"><br>
+        <label for="type">Type:</label>
+        <label for="car">Audi</label><br>
+        <label for="price">Price:</label>
+        <label for="amount">600,000$</label><br>
+        <label for="Country">Country:</label>
+        <label for="place">German car</label><br>
+    </div>
+
+
+
+    <div class="serve">
+    <h1><u>Our Services</u></h1>
+</div>
+
+<h2>Choose the service that you want to get</h2>
+
+
+    <div id="Services">
+    <div class="service">
+    <a href="Booking a car">1. Booking a car</a><br><br>
+    <img src="booking.jpeg" alt="" width="150px" height="100">
+</div>
+
+<div class="service">
+    <a href="Ordering a car">2. Ordering a car</a><br><br>
+    <img src="ordering.jpeg" alt="" width="150px" height="100">
+</div>
+
+<div class="service">
+   <a href="Renting a car">3. Renting a car</a><br><br>
+    <img src="Renting car .jpeg" alt="" width="150px" height="100">
+</div>
+
+<div class="service">
+    <a href="Returning the car">4. Returning the car</a><br><br>
+    <img src="returning car.jpeg" alt="" width="150px" height="100">
+</div>
+
+</div>
+
+
+<u><h1>Contact</h1></u>
+
+<div class="contacts">
+    <img src="13-18-25-242_512.webp" alt="" width="300px" height="200px">
+
+
+<div class="contact">
+
+<h3>Email</h3>
+<p>
+    <a href="mailto:ngugibrian520@gmail.com">ngugibrian520@gmail.com</a>
+</p>
+
+<h3>Phone number</h3>
+<p>
+    <a href="tel:+254 741819799">+254 741819799</a>
+</p>
+
+<h3>Linkedin</h3>
+<p>
+    <a href="https://www.linkedin.com/in/brian-ngugi-141526268">www.linkedin.com/in/brian-ngugi-141526268</a>
+</p>
+</div>
+</div>
+
+
+</body>
 </html>
